force-app/main/default/objects/Activity/fields/PMC_Goal__c.field-meta.xml
<CustomField>
    <fullName>PMC_Goal__c</fullName>
    <label>Goal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Biosciences</fullName>
            </value>
            <value>
                <fullName>Client Prospecting</fullName>
            </value>
            <value>
                <fullName>Demand Generation</fullName>
            </value>
            <value>
                <fullName>Demand Planning</fullName>
                <isActive>false</isActive>
                <label>Demand Planning</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rebate</fullName>
            </value>
            <value>
                <fullName>Relationship Building</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Water Soluble</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>