force-app/main/default/objects/Activity/fields/PMC_Goal_Description__c.field-meta.xml
<CustomField>
    <fullName>PMC_Goal_Description__c</fullName>
    <label>Goal Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>