force-app/main/default/objects/Activity/fields/PMC_SS_AccountSegmentation__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AccountSegmentation__c</fullName>
    <description>Segmentation Customer belongs to</description>
    <formula>TEXT(Account.PMC_SS_Segmentation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Segmentation</label>
    <type>Text</type>
</CustomField>