force-app/main/default/objects/Activity/fields/PMC_SS_RejectionReason__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_RejectionReason__c</fullName>
    <description>Reason why changes were rejected by MDM team</description>
    <label>Rejection Reason</label>
    <type>TextArea</type>
</CustomField>